CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Miknet)

OPTION(MIK_DEBUG off)
OPTION(TESTS off)

IF(MIK_DEBUG)
	ADD_DEFINITIONS(-DMIK_DEBUG=1)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
ELSE()
	ADD_DEFINITIONS(-DMIK_DEBUG=0)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
ENDIF()

INCLUDE_DIRECTORIES(src/include)

FILE(GLOB SRC_MIKNET src/*.c)

ADD_LIBRARY(miknet ${SRC_MIKNET})

IF(TESTS)
	ADD_EXECUTABLE(servtest servtest.c)
	ADD_EXECUTABLE(clitest clitest.c)

	ADD_DEPENDENCIES(servtest miknet)
	ADD_DEPENDENCIES(clitest miknet)

	TARGET_LINK_LIBRARIES(servtest miknet)
	TARGET_LINK_LIBRARIES(clitest miknet)
ENDIF()

INSTALL(FILES src/include/miknet/miknet.h DESTINATION include/miknet)
INSTALL(TARGETS miknet ARCHIVE DESTINATION lib)

SET(CMAKE_C_WARNINGS "-Wall")

SET(CMAKE_C_FLAGS "${CMAKE_C_WARNINGS} ${CMAKE_C_FLAGS}")
