[package]
name = "miknet"
version = "0.1.0"
authors = ["Payton Turnage <paytonturnage@gmail.com>"]

[dependencies]
bincode = "0.8"
serde = "1.0"
serde_derive = "1.0"
error-chain = { git = "https://github.com/rust-lang-nursery/error-chain" }
futures = "0.1.14"
tokio-core = "0.1.9"
rand = "0.3"
rust-crypto = "^0.2"
