[package]
name = "miknet"
version = "0.1.0"
authors = ["Payton Turnage <paytonturnage@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.79"
serde_derive = "1.0.79"
itertools = "0.7.8"
bincode = "1.0.1"
rust-crypto = "0.2.36"
rand = "0.5.5"
failure = "0.1.3"
lazy_static = "1.1.0"
failure_derive = "0.1.3"
enum_derive = "0.1.7"
macro-attr = "0.2.0"
