[package]
name = "bench"
version = "0.1.0"
authors = ["Payton Turnage <pt@paytonturnage.com>"]
edition = "2018"

[dependencies]
nhanh = { path = "../nhanh" }
futures = "0.3.4"
anyhow = "1.0.27"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
futures-timer = "3.0.2"
async-std = { version = "1.0", features = ["attributes"] }
rental = "0.5"
thiserror = "1.0.11"
tokio-util = { version = "0.3.0", features = ["codec", "compat"] }
bytes = "0.5.4"
tokio-serde = { version = "0.6", features = ["bincode"] }
