[package]
name = "bench"
version = "0.1.0"
authors = ["Payton Turnage <pt@paytonturnage.com>"]
edition = "2018"

[dependencies]
nhanh = { path = "../nhanh" }
futures = "0.3.4"
anyhow = "1.0.27"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
futures-timer = "3.0.2"
async-std = { version = "1.0", features = ["attributes"] }
thiserror = "1.0.11"
tokio-util = { version = "0.3.0", features = ["codec", "compat"] }
bytes = "0.5.4"
tokio-serde = { version = "0.6", features = ["bincode"] }
structopt = "0.3.12"
csv = "1.1.3"
itertools = "0.9.0"
rand = "0.7.3"
float-ord = "0.2.0"

[profile.release]
debug = true

[build-dependencies]
bindgen = "0.53"
duct = "0.13.3"
